code for occlusion query should be ready, doesn't work todo: figure out why.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -26,13 +26,19 @@ dist.jar=${dist.dir}/obacht.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jinput.jar=lib/jinput.jar
+file.reference.lwjgl-debug.jar=lib/lwjgl-debug.jar
+file.reference.lwjgl_util.jar=lib/lwjgl_util.jar
 file.reference.obacht-src=src
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=true
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${libs.LWJGL.classpath}
+    ${libs.LWJGL.classpath}:\
+    ${file.reference.jinput.jar}:\
+    ${file.reference.lwjgl-debug.jar}:\
+    ${file.reference.lwjgl_util.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
