font rendering WIP...

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -58,6 +58,8 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
+javadoc.reference.lwjgl-debug.jar=/home/claus/svns/libs/lwjgl-docs-2.8.5.zip!/javadoc/
+javadoc.reference.lwjgl_util.jar=/home/claus/svns/libs/lwjgl-docs-2.8.5.zip!/javadoc/
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
@@ -87,4 +89,6 @@ run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
+source.reference.lwjgl-debug.jar=/home/claus/svns/libs/lwjgl-source-2.8.5.zip!/src/java/
+source.reference.lwjgl_util.jar=/home/claus/svns/libs/lwjgl-source-2.8.5.zip!/src/java/
 src.dir=${file.reference.obacht-src}
