--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,6 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 application.title=obacht-gl
@@ -35,7 +36,6 @@ jar.archive.disabled=${jnlp.enabled}
 jar.compress=true
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${libs.LWJGL.classpath}:\
     ${file.reference.jinput.jar}:\
     ${file.reference.lwjgl-debug.jar}:\
     ${file.reference.lwjgl_util.jar}
